# edu-vocab-pipeline

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Untitled  alembic.ini  docker-compose.yml  pyproject.toml  roadmap.md
alembic/versions/: 001_add_users.py  002_add_batch.py
backend/alembic/: env.py
deploy/: nginx-dev.conf  nginx.conf
docs/: fix.md  fix2.md  fix3-response.md  fix3.md  gaea-production-env.md  pending-fixes-v2.md  security-fix-summary.md  todo.md  单词2.0--内容生产与质检工作流程.md  词表导入模板.xlsx
docs/data/: morpheme_prefixes.csv  morpheme_roots.csv  morpheme_suffixes.csv
docs/design/: PRD.md  model-selection-golden-test-set.md  output-schema.md  project-plan.md  qc-test-set-size-analysis.md  qc-test-words-25.md  单词2.0--内容生产与质检工作流程.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
gaea/: Dockerfile  nginx.conf
qc-model-eval/: .gitignore  checkpoints.py  config.py  extract_cases.py  report.py  requirements.txt  run_eval.py  test_full_prompt_qc.py
qc-model-eval/results/: eval_chunk_GPT-5.2.json  eval_chunk_Gemini.json  eval_chunk_豆包.json  eval_mnemonic_exam_app_GPT-5.2.json  eval_mnemonic_exam_app_Gemini.json  eval_mnemonic_exam_app_豆包.json  eval_mnemonic_root_affix_GPT-5.2.json  eval_mnemonic_root_affix_Gemini.json  eval_mnemonic_root_affix_豆包.json  eval_mnemonic_sound_meaning_GPT-5.2.json  eval_mnemonic_sound_meaning_Gemini.json  质检模型评估报告.md  (+11 more)
scripts/: fix_orphan_failed_items.py  generate_qc_eval_template.py
standards/: standards.yaml
tests/: conftest.py
(+245 files in other folders)
